# -Openenv_Hiring_Assistant

./: .gitignore  Dockerfile  README.md  SUBMISSION_CHECKLIST.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  test_api_config.py  test_env.py  test_full_pipeline.py  test_grader.py  test_output_format.py  test_pydantic_validation.py  test_score_range.py  test_universal_hiring.py
data/: jobs.json  jobs_expanded.json  resumes.json  resumes_expanded.json
graders/: base_grader.py  hiring_grader.py
models/: schemas.py
server/: __init__.py  app.py
tasks/: business.py  easy.py  hard.py  management.py  marketing.py  medium.py
